added js linked file, jumbo out of container, and map-input changes

--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
 </head>
 
 <body>
-	<div class="container-fluid">
 
-		<div class="jumbotron jumbotron-billboard" id=jumbotron1>
-			<div class="img"></div>
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12" id=openText>
-						<h2>A house
-							<br> is never lonely
-							<br> where a
-							<br> loving dog waits.
-						</h2>
-					</div>
+	<div class="jumbotron jumbotron-billboard" id=jumbotron1>
+		<div class="img"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12" id=openText>
+					<h2>A house
+						<br> is never lonely
+						<br> where a
+						<br> loving dog waits.
+					</h2>
 				</div>
 			</div>
 		</div>
+	</div>
 
+	<div class="container-fluid">
 
 		<div class="row">
 
-			<div class="col-sm-12 inputField" id="search">
+			<div class="col-sm-4 inputField" id="search">
 				<h3>Find your future dog!</h3>
 				<br>
 				<label for="location">Enter your location: </label>
@@ -55,39 +55,30 @@
 				<button type="button" class="btn btn-primary" id="submitBtn">Submit</button>
 				<br>
 			</div>
-		</div>
 
-
-		<div class="row">
-
-			<div class="col-sm-12" id=mapSpace>
+			<div class="col-sm-8" id=mapSpace>
 				<img id="map" src="assets/css/carousel1.jpg">
 				<img>
 			</div>
 
 		</div>
 
-		
-		<div class="hidde" id="hiddenElements">
-
-			<div class="row">
-				<div class="col-sm-12" id="cardSpace">
-
-				</div>
-			</div>
-
+		<div class="row">
+			<div class="col-sm-12" id="cardSpace"></div>
 		</div>
 	</div>
 
 
 
-
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+	<!--jQuery and eventual firebase links-->
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 	 crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
 	 crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 	 crossorigin="anonymous"></script>
 
+	<!--Linking Javascript file-->
+	<script src="assets/javascript/app.js"></script>
 
 </body>
