--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 			<div class="col-sm-4 inputField" id="search">
 				<h3>Find your future dog!</h3>
 				<br>
-				<label for="location">Enter your location: </label>
-				<input type="user location" class="form-control" id="location" placeholder="Location">
+				<label for="location">Enter your Zip Code: </label>
+				<input type="user location" class="form-control" id="zip" placeholder="Location">
 				<br>
 				<label for="breed">Your desired breed: </label>
 				<input type="user location" class="form-control" id="breed" placeholder="Breed">
@@ -64,7 +64,7 @@
 		</div>
 
 		<div class="row">
-			<div class="col-sm-12" id="cardSpace"></div>
+			<div class="col-sm-12 card-columns" id="cardSpace"></div>
 		</div>
 	</div>
 
