navbar, footer, resource page created

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<title>Dog Finder</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
-	 crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -15,6 +14,31 @@
 </head>
 
 <body>
+
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="#">Navbar</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+		 aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto" style="list-style-type:none">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home
+						<span class="sr-only">(current)</span>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="petsinfo.html">Dog FAQs</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="resources.html">Helpful Resources</a>
+				</li>
+				
+			</ul>
+		</div>
+	</nav>
 
 	<div class="jumbotron jumbotron-billboard" id=jumbotron1>
 		<div class="img"></div>
@@ -38,8 +62,8 @@
 			<div class="col-sm-4 inputField" id="search">
 				<h3>Find your future dog!</h3>
 				<br>
-				<label for="location">Enter your location: </label>
-				<input type="user location" class="form-control" id="location" placeholder="Location">
+				<label for="location">Enter your Zip Code: </label>
+				<input type="user location" class="form-control" id="zip" placeholder="Location">
 				<br>
 				<label for="breed">Your desired breed: </label>
 				<input type="user location" class="form-control" id="breed" placeholder="Breed">
@@ -67,7 +91,10 @@
 			<div class="col-sm-12" id="cardSpace"></div>
 		</div>
 	</div>
-
+	
+	<nav class="navbar justify-content-center navbar-dark bg-dark footer">
+        <a class="navbar-brand" href="#"><p id="copyright">Built by Karen Beltran, Nicole Brasaemle, Corey Miller, and DJ Steinmetz Copyright &copy; 2018 Powered by Petfinder</p></a>
+    </nav>
 
 
 	<!--jQuery and eventual firebase links-->
@@ -82,3 +109,4 @@
 	<script src="assets/javascript/app.js"></script>
 
 </body>
+</html>
