added to resource page

--- a/resources.html
+++ b/resources.html
@@ -41,6 +41,21 @@
         </div>
     </nav>
 
+    <div class="jumbotron jumbotron-billboard" id=jumbotron1>
+        <div class="img"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12" id=openText>
+                    <h2>A house
+                        <br> is never lonely
+                        <br> where a
+                        <br> loving dog waits.
+                    </h2>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
