fixed home on nav bar, links in footer, and a few other things

--- a/resources.html
+++ b/resources.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body class="bg-dark">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Navbar</a>
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto" style="list-style-type:none">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home
+                    <a class="nav-link" href="index.html">Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
@@ -56,27 +56,28 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container resourcePage">
         <div class="row">
             <div class="col-sm-12">
                 <h2>Helpful Resources</h2>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <h4>Free Download of Puppy Books:</h4>
-                <a href="https://www.dogstardaily.com/free-downloads">Download Here!</a>
+        <div class="row resourceRow">
+            <div class="col-sm-12 resources">
+                
             </div>
         </div>
         <br>
     </div>
 
     <nav class="navbar justify-content-center navbar-dark bg-dark footer">
-        <a class="navbar-brand" href="#">
-            <p id="copyright">Built by Karen Beltran, Nicole Brasaemle, Corey Miller, and DJ Steinmetz Copyright &copy; 2018 Powered by Petfinder</p>
+        <a class="navbar-brand ftr" id="copyright"> Built by
+            <a href="https://github.com/BFRaven" target="_blank"> Karen Beltran</a>,
+            <a href="https://github.com/nbrasaemle" target="_blank">Nicole Brasaemle</a>,
+            <a href="https://github.com/Cmiller8421" target="_blank">Corey Miller</a>, and 
+            <a href="https://github.com/djsteinmetz" target="_blank">  DJ Steinmetz</a> Copyright &copy; 2018 Powered by Petfinder</p>
         </a>
     </nav>
-
 
     <!--jQuery and eventual firebase links-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
