add info page footer, change some styling

--- a/petsinfo.html
+++ b/petsinfo.html
@@ -120,7 +120,8 @@
                     </li>
                 </p>
                 <h2>Q6: I am an experienced dog owner, can I add resources or tips to help adopters in this site? </h2>
-                <p>A6: Most certainly! Hop on over to our  <a href="resources.html">Resources Page</a>, to add to our community forum!</p>
+                <p>A6: Most certainly! Hop on over to our
+                    <a href="resources.html">Resources Page</a>, to add to our community forum!</p>
 
             </div>
 
@@ -130,6 +131,15 @@
 
 
     </div>
+
+    <nav class="navbar justify-content-center navbar-dark bg-dark footer">
+        <a class="navbar-brand ftr" id="copyright"> Built by
+            <a href="https://github.com/BFRaven" target="_blank"> Karen Beltran</a>,
+            <a href="https://github.com/nbrasaemle" target="_blank">Nicole Brasaemle</a>,
+            <a href="https://github.com/Cmiller8421" target="_blank">Corey Miller</a>, and
+            <a href="https://github.com/djsteinmetz" target="_blank"> DJ Steinmetz</a> Copyright &copy; 2018 Powered by Petfinder</p>
+        </a>
+    </nav>
 
     <!--Bootstrap(and jQuery) links-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
