added firebase part and modified other tid bits

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<form action="" class="location-form">
 						<!-- <label for="location">Postal Code/Zip Code:</label> -->
 
-						<input type="text" id="zip" placeholder="<Enter Your Zip Code Here>">
+						<input type="text" id="zip" placeholder="Enter Your Zip Code Here">
 						<input type="submit" id="submitBtn" value="Find Dogs">
 
 					</form>
