added placeholder on html for links and other tid bits.

--- a/resources.html
+++ b/resources.html
@@ -98,7 +98,7 @@
 
                     <div class="form-group">
                         <label for="link-input">Link</label>
-                        <input class="form-control" id="link-input" placeholder="Link">
+                        <input class="form-control" id="link-input" placeholder="http://www." value="http://www.">
                     </div>
 
                     <button type="button" class="btn btn-light" id="input-resource">Add Resource</button>
