--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Dog Finder</title>
+	<title>Under One Woof | Home</title>
     <!-- FavIcon -->
 	<link rel="icon" type="image/png" href="assets/branding/under-one-woof-logo_favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,13 +18,12 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<a class="navbar-brand" href="index.html">
 			<img src="assets/branding/under-one-woof-logo_logoBar5-light.png" width="200">
 		</a>
 
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-		 aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
@@ -41,7 +40,6 @@
 				<li class="nav-item">
 					<a class="nav-link" href="resources.html">Helpful Resources</a>
 				</li>
-
 			</ul>
 		</div>
 	</nav>
