--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body>
+<body onload="initialize()">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<a class="navbar-brand" href="index.html">
 			<img src="assets/branding/under-one-woof-logo_logoBar5-light.png" width="200">
@@ -59,8 +59,8 @@
 			<div class="col-sm-12 text-center" id="searchBar">
 				<form>
 					<div class="form-group">
-						<input type="number" class="form-control" id="zip" placeholder="Enter a zip code!">
-						<button type="button" class="btn btn-info" id="submitBtn">Find Dogs!</button>
+						<input type="number" class="form-control" id="address" placeholder="Enter a zip code!">
+						<button type="button" class="btn btn-info" id="submitBtn"onclick="codeAddress()">Find Dogs!</button>
 					</div>
 				</form>
 			</div>
@@ -70,13 +70,15 @@
 		<div class="row">
 			<div class="col-sm-12 card-columns" id="cardSpace"></div>
 		</div>
+	<br>
 		<div class="row">
 			<div class="col-sm-12" id="mapSpace">
 				<div id="map"></div>
 			</div>
 		</div>
 	</div>	
-
+	<br>
+	<br>
 	<nav class="navbar justify-content-center navbar-dark bg-dark footer">
 		<p class="navbar-brand" id="copyright">
 			<p>Built by:</p>
