Changed FAQs typos, changed from helpful resources to Community Resources.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 					<a class="nav-link" href="petsinfo.html">Dog FAQs</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="resources.html">Helpful Resources</a>
+		 <!-- Changed actual html from Helpful Resources to Community -->
+
+					<a class="nav-link" href="resources.html">Community Resources</a>
 				</li>
 			</ul>
 		</div>
