--- a/petsinfo.html
+++ b/petsinfo.html
@@ -42,7 +42,9 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="resources.html">Helpful Resources</a>
+         <!-- Changed actual html from Helpful Resources to Community -->
+
+                    <a class="nav-link" href="resources.html">Community Resources</a>
                 </li>
             </ul>
         </div>
@@ -73,7 +75,8 @@
                     <div class="card-body">
                         <p class="card-text">Find as much information about the dog you are interested in adopting as you like, then click below
                             to find more info from the shelter you want to adopt from.</p>
-                        <a href="index.html" target="_blank" class="btn btn-info">Explore Nearby Shelters</a>
+                            <br>
+                        <a href="index.html"  class="btn btn-info">Explore Nearby Shelters</a>
                     </div>
                 </div>
             
@@ -90,8 +93,10 @@
                             <li class="list-group-item">Dog bedding</li>
                             <li class="list-group-item">Water and food bowls, preferrably stainless steel</li>
                         </ul>
-                        <p class="card-text">For detailed information, checkout the Resouces page</p>
-                        <a href="resources.html" target ="_blank" class="btn btn-info">Find Resources</a>
+                        <br>
+                        <p class="card-text">For detailed information, checkout the Community Resources page.</p>
+                        <br>
+                        <a href="resources.html"  class="btn btn-info">Find Resources</a>
                     </div>
                 </div>
             
@@ -106,8 +111,10 @@
                             <li class="list-group-item">Canine Adenovirus-2 (Hepatitus)</li>
                             <li class="list-group-item">Canine Parvovirus</li>
                         </ul>
-                        <p class="card-text">For more information about the vaccines, checkout the Resources page</p>
-                        <a href="resources.html" target="_blank" class="btn btn-info">Find Resources</a>
+                        <br>
+                        <p class="card-text">For more information about the vaccines, checkout the Community Resources page.</p>
+                        <br>
+                        <a href="resources.html"  class="btn btn-info">Find Resources</a>
                     </div>
                 </div>
 
@@ -115,12 +122,11 @@
                 <div class="card">
                     <h5 class="card-header">Which vet clinic should I visit with my new dog?</h5>
                     <div class="card-body">
-                        <p class="card-text">Make sure your dog has at the following vaccinations at minimum:</p>
                         <p class="card-text">There are many factors to consider when choosing a vet clinic. There are shelters that offer clinic services
-                                and are non-profit, as well as for-profit clinics; depending on the needs of your dog and your budget, might
-                                want to gather more information from the shelter you adopted your dog from</p>
-                        <p class="card-text">For more information about the vaccines, follow the link below</p>
-                        <a href="index.html" target="_blank" class="btn btn-info">Find Vet Clinics</a>
+                                and are non-profit, as well as for-profit clinics; depending on the needs of your dog and your budget, you might
+                                want to gather more information from the shelter you adopted your dog from.</p>
+                                <br>
+                        <a href="resources.html"  class="btn btn-info">Find Vet Clinics</a>
                     </div>
                 </div>
 
@@ -137,8 +143,10 @@
                             <li class="list-group-item">Does this dog have any training?</li>
                             <li class="list-group-item">If the dog cannot adapt to its new home, can I return it to the shelter?</li>
                         </ul>
-                        <p class="card-text">For more information about the vaccines, checkout the Resources page</p>
-                        <a href="resources.html" target="_blank" class="btn btn-info">Find Resources</a>
+                        <br>
+                        <p class="card-text"> Check the Community Resources page if you have more questions.</p>
+                        <br>
+                        <a href="resources.html"  class="btn btn-info">Find Resources</a>
                     </div>
                 </div>
 
@@ -146,8 +154,9 @@
                 <div class="card">
                     <h5 class="card-header">I am an experienced dog owner, can I add resources or tips to help adopters in this site?</h5>
                     <div class="card-body">
-                        <p class="card-text">Most certainly! Hop on over to our Resources page to add to our community forum!</p>
-                        <a href="resources.html" target="_blank" class="btn btn-info">Resources Forum</a>
+                        <p class="card-text">Most certainly! Hop on over to the Community Resources page to add to our community forum!</p>
+                        <br>
+                        <a href="resources.html"  class="btn btn-info">Resources Forum</a>
                     </div>
                 </div>
             </div>
@@ -165,7 +174,7 @@
             <p><a class = "author" href="https://github.com/nbrasaemle" target="_blank">Nicole Brasaemle,</a></p>
             <p><a class = "author" href="https://github.com/Cmiller8421" target="_blank">Corey Miller</a></p>
             <p>and</p>
-            <p><a class = "author" href="https://github.com/djsteinmetz" target="_blank">DJ Steinmetz</a>&nbsp;|&nbsp;&copy; 2018 Powered by <a class = "author" href="https://www.petfinder.com/">Petfinder</a></p>
+            <p><a class = "author" href="https://github.com/djsteinmetz" target="_blank" >DJ Steinmetz</a>&nbsp;|&nbsp;&copy; 2018 Powered by <a class = "author" href="https://www.petfinder.com/">Petfinder</a></p>
         </p>
     </nav>
 
