--- a/resources.html
+++ b/resources.html
@@ -9,7 +9,9 @@
         <!-- FavIcon -->
         <link rel="icon" type="image/png" href="assets/branding/under-one-woof-logo_favicon.png">
         <!-- Page Title -->
-        <title>Under One Woof | Helpful Resources</title>
+     <!-- Changed actual html from Helpful Resources to Community -->
+
+        <title>Under One Woof | Community Resources</title>
         <!-- Reset CSS -->
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <!-- Bootstrap CDN -->
@@ -41,7 +43,10 @@
                     <a class="nav-link" href="petsinfo.html">Dog FAQs</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="resources.html">Helpful Resources
+                                   
+                    <!-- Changed actual html from Helpful Resources to Community -->
+
+                    <a class="nav-link" href="resources.html">Community Resources
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
@@ -63,7 +68,8 @@
         <!-- Resources Title -->
         <div class="row">
             <div class="col-sm-12 faqs">
-                <h1 id="helpfulResources">Helpful Resources</h1>
+                <!-- Changed actual html from Helpful Resources to Community -->
+                <h1 id="helpfulResources">Community Resources</h1>
             </div>
         </div>
         <div class="row resourceRow">
