--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
 					<a class="nav-link" href="petsinfo.html">Dog FAQs</a>
 				</li>
 				<li class="nav-item">
-		 <!-- Changed actual html from Helpful Resources to Community -->
-
-					<a class="nav-link" href="resources.html">Community Resources</a>
+					<a class="nav-link" href="resources.html">Helpful Resources</a>
 				</li>
 			</ul>
 		</div>
@@ -64,8 +62,8 @@
 			<div class="col-md-5 text-center" id="searchBar">
 				<form>
 					<div class="form-group">
-						<div id="zip-error">Please Enter a Valid Zip Code</div>
-						<input type="number" class="form-control" id="address" placeholder="Enter a zip code!" required>
+							<div id="zip-error">Please Enter a Valid Zip Code</div>
+							<input type="number" class="form-control" id="address" placeholder="Enter a zip code!" required>
 						<button type="button" class="btn btn-info" id="submitBtn"onclick="codeAddress()">Find Dogs!</button>
 					</div>
 				</form>
@@ -108,7 +106,7 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWROZUo7K5pSAulbxMPqG9RUFa2LtA9lc&callback=initMap"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWROZUo7K5pSAulbxMPqG9RUFa2LtA9lc"></script>
 
 	<!--Linking Javascript file-->
 	<script src="assets/javascript/app.js"></script>
