--- a/petsinfo.html
+++ b/petsinfo.html
@@ -18,6 +18,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -63,12 +65,12 @@
     <div class="container-fluid">
         <!-- FAQ Title -->
         <div class="row">
-            <div class="col-sm-12 faqs">
+            <div class="col-lg-12 faqs">
                 <h1 id="faq">Frequently Asked Questions:</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12 card-columns">
+            <div class="col-lg-12 card-columns">
                 <!-- FAQ 1 -->
                 <div class="card">
                     <h5 class="card-header">What kind of dog should I adopt?</h5>
@@ -179,14 +181,13 @@
     </nav>
 
     <!--Bootstrap(and jQuery) links-->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous"></script>
     <!--JavaScript Links-->
     <script src="assets/javascript/app.js"></script>
+    <script src="assets/javascript/hoverEffect.js"></script>
 </body>
 
 </html>
