fixed mobile table views

--- a/resources.html
+++ b/resources.html
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="row resourceRow">
-            <div class="col-sm-12 resources">
+            <div class="col-sm-12 resources" id="flip-scroll">
                 <table class="table">
                     <thead>
                         <tr>
@@ -82,7 +82,7 @@
                             <th scope="col">Link: </th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="resourcesTable">
                         <!-- resources get dynamically added here -->
                     </tbody>
                 </table>
