--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<a class="nav-link" href="petsinfo.html">Dog FAQs</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="resources.html">Helpful Resources</a>
+					<a class="nav-link" href="resources.html">Community Resources</a>
 				</li>
 			</ul>
 		</div>
